# Simple-Streaming-Audio-Playback-with-Sampling-Rate-Conversion

./: README.md
audioPlayer/audioPlayer/code/: .gitignore  CMakeLists.txt
audioPlayer/audioPlayer/code/alsaApiInterfaceShared/: CMakeLists.txt  alsaApiInterface.cpp  alsaApiInterface.h  alsaWriteLoopModeEnumerance.h
audioPlayer/audioPlayer/code/audioBufferPoolInterfaceShared/: CMakeLists.txt
audioPlayer/audioPlayer/code/audioBufferPoolInterfaceShared/linux/: CMakeLists.txt  audioBufferPoolInterface.cpp  audioBufferPoolInterface.h
audioPlayer/audioPlayer/code/audioBufferPoolInterfaceShared/windows/: CMakeLists.txt  audioBufferPoolInterface.cpp  audioBufferPoolInterface.h  audioBufferPoolInterfaceCommonHeader.h
audioPlayer/audioPlayer/code/audioInterfaceShared/linux/: CMakeLists.txt  audioInterface.cpp  audioInterface.h
audioPlayer/audioPlayer/code/audioInterfaceShared/windows/: CMakeLists.txt  audioInterface.cpp  audioInterface.h  audioInterfaceDLLheader.h  audioThreadsStateEnumeration.h
audioPlayer/audioPlayer/code/audioMessageQueueInterfaceShared/: CMakeLists.txt  audioMessageAdd.cpp  audioMessageAdd.h  audioMessageBase.cpp  audioMessageBase.h  audioMessageIdEnumerance.h  audioMessageOneFile.cpp  audioMessageOneFile.h  audioMessageQueue.cpp  audioMessageQueue.h  audioMessageQueueInterfaceDLLheader.h
audioPlayer/audioPlayer/code/audioTestShared/: CMakeLists.txt
audioPlayer/audioPlayer/code/audioTestShared/linux/: audioTest1.cpp  audioTest1.h
audioPlayer/audioPlayer/code/audioTestShared/windows/: audioTest1.cpp  audioTest1.h  audioTestSharedDLLheader.h
audioPlayer/audioPlayer/code/commonHeaders/: characterCodeMacro.h  dataReadingMethod.h  debugMacro.h  endianInfo.h  m_piConstants.h  noCopyAndMoveTemplate.h  noCopyTemplate.h  noMoveTemplate.h  pcmSampleTypeEnumeration.h  samplingRateConversionEnumeration.h
audioPlayer/audioPlayer/code/entryPoint/: CMakeLists.txt  main.cpp
audioPlayer/audioPlayer/code/linuxApiWrapperShared/: CMakeLists.txt
audioPlayer/audioPlayer/code/linuxApiWrapperShared/linuxApiWrapper/: fileDescriptorApi.cpp  fileDescriptorApi.h  pthreadApi.cpp  pthreadApi.h
audioPlayer/audioPlayer/code/myUtilityShared/: CMakeLists.txt  checkEndian.cpp  checkEndian.h  fileManagement.cpp  fileManagement.h  getBinaryFileSize.cpp  getBinaryFileSize.h  greatestCommonDevisorCalculation.cpp  greatestCommonDevisorCalculation.h  memoryMappingInterface.cpp  memoryMappingInterface.h  myUtilityDLLHeader.h  powerOfTwoUtility.cpp  powerOfTwoUtility.h
audioPlayer/audioPlayer/code/myUtilityShared/linux/: epollInterfaceBase.cpp  epollInterfaceBase.h  eventFdInterface.cpp  eventFdInterface.h  eventWaitingInterface.cpp  eventWaitingInterface.h  fileDescriptorManagement.cpp  fileDescriptorManagement.h  pollingFdBase.cpp  pollingFdBase.h  pthreadMutexManagement.cpp  pthreadMutexManagement.h  signalFdInterface.cpp  signalFdInterface.h  threadManagementInterface.cpp  threadManagementInterface.h  timepieceInterface.cpp  timepieceInterface.h  timerFdInterface.cpp  timerFdInterface.h
audioPlayer/audioPlayer/code/myUtilityShared/windows/: criticalSectionManagement.cpp  criticalSectionManagement.h  eventManagementInterface.cpp  eventManagementInterface.h  handleManagementInterface.cpp  handleManagementInterface.h  threadManagementInterface.cpp  threadManagementInterface.h  timeMeasurement.cpp  timeMeasurement.h
audioPlayer/audioPlayer/code/primaryBufferInterfaceShared/: CMakeLists.txt  primaryBufferInterface.cpp  primaryBufferInterface.h  primaryBufferInterfaceDLLheader.h
audioPlayer/audioPlayer/code/samplingRateConversionInterfaceShared/: CMakeLists.txt  discreteFourierTransform.cpp  discreteFourierTransform.h  discreteFourierTransformTemplate.h  fastFourierTransform.cpp  fastFourierTransform.h  fourierTransformBase.cpp  fourierTransformBase.h  lowPassFIRfilter.cpp  lowPassFIRfilter.h  lowPassFIRfilterTemplate.h  samplingRateConversionInterfaceDLLheader.h  samplingRateConvertorBase.cpp  samplingRateConvertorBase.h  samplingRateConvertorInterface.cpp  samplingRateConvertorInterface.h
audioPlayer/audioPlayer/code/secondaryBuffersInterface/: CMakeLists.txt
audioPlayer/audioPlayer/code/secondaryBuffersInterface/oggInterfaceShared/: CMakeLists.txt  oggCollectiveInterface.cpp  oggCollectiveInterface.h  oggInterfaceBase.cpp  oggInterfaceBase.h  oggInterfaceConstants.h  oggInterfaceDLLheader.h  oggSuccessiveInterface.cpp  oggSuccessiveInterface.h
audioPlayer/audioPlayer/code/secondaryBuffersInterface/oggInterfaceShared/save/: oggVorbisCollectively.cpp  oggVorbisInterface.cpp
audioPlayer/audioPlayer/code/secondaryBuffersInterface/secondaryBufferBaseShared/: CMakeLists.txt  secondaryBufferBase.cpp  secondaryBufferBase.h  secondaryBufferBaseDLLheader.h
audioPlayer/audioPlayer/code/secondaryBuffersInterface/wavInterfaceShared/: CMakeLists.txt  checkWav.cpp  checkWav.h  wavCollectiveInterface.cpp  wavCollectiveInterface.h  wavInterfaceBase.cpp  wavInterfaceBase.h  wavInterfaceDLLheader.h  wavSuccessiveInterface.cpp  wavSuccessiveInterface.h
audioPlayer/audioPlayer/code/secondaryBuffersInterface/wavInterfaceShared/save/: SecondaryBufferCollectivelyOgg.cpp  SecondaryBufferCollectivelyOgg.h  audioErr.cpp  audioError.h  checkEndian.cpp  checkEndian.h  oggVorbisBase.h  oggVorbisCollectively.cpp  oggVorbisCollectively.h  oggVorbisSuccessively.cpp  oggVorbisSuccessively.h  portAudioConstants.h  portAudioInterface.cpp  (+11 more)
audioPlayer/audioPlayer/code/systemErrorInterfaceShared/: CMakeLists.txt  systemErrorInterface.cpp  systemErrorInterface.h  systemErrorInterfaceDLLheader.h
audioPlayer/audioPlayer/code/win32ApiWrapperShared/: CMakeLists.txt
audioPlayer/audioPlayer/code/win32ApiWrapperShared/win32ApiWrapper/: eventApi.cpp  eventApi.h  handleApi.cpp  handleApi.h  threadApi.cpp  threadApi.h  win32ApiWrapperDLLheader.h
audioPlayer/audioPlayer/code/win32AudioApiInterfaceShared/: CMakeLists.txt  win32AudioApiInterface.cpp  win32AudioApiInterface.h  win32AudioApiInterfaceDLLheader.h  win32AudioApiPlayDoneNotificationTypeEnumerance.h  win32AudioCallbackUserDataStruct.h
(+2 files in other folders)
